# groups-word-problem

./: .gitignore  _CoqProject  groups-word-problem.opam  notes.md
.github/workflows/: blueprint.yml
blueprint/src/: biblio.bib  content.tex  extra_styles.css  plastex.cfg  print.tex  web.tex
blueprint/src/macros/: common.tex  print.tex  web.tex
home_page/: _config.yml  index.md
home_page/_layouts/: default.html
theories/: APBQ.v  Equivalence.v  EquivalenceAlgebra.v  F2.v  GeneratedSubgroup.v  GroupTactic.v  HNN.v  Main.v  NielsenSchreier.v  Nielsen_Schreier.v  Preorder.v  Presentation.v  SeqExtension.v  Sizelexi.v  Utils.v  WellFounded.v  sizelexi.v  well_founded.v
